--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@
   border: 1px solid var(--color-separator-primary-alpha);
   --primary-color: white;
   --text-color: #333333;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color) !important;
   font-weight: 700;
 }
 
